# solana_aii

./: .gitignore  L2_design.md  README.md  layman_readme.md  poh_pouw_design.md  poh_pouw_hybrid.md  poh_pouw_parallel.md
schemas/: logit_example.json  logit_example_2.json  logit_schema.json  logit_schema_2.json  logit_schemas.md
solana-aii/: Cargo.toml
solana-aii-programs/: Cargo.toml
solana-aii-programs/src/: lib.rs
solana-aii/src/: ai_inference_example.rs  ai_model_weight_example.rs  lib.rs  logit_verification.rs  logit_verification_2.rs  mock_validator.rs  model_registry.rs  poh_pouw_chain.rs  pouw_l2.rs
