[package]
name = "solana-aii"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = {version = "0.4.38", features = ["serde"]}
serde = { version = "1.0.213", features = ["derive"] }
serde_derive = "1.0.214"
sha2 = "0.10.8"
serde_json = "1.0.132"

solana-sdk = "2.0.14"
solana-program = "2.0.14"
borsh = {version = "1.5.1", features = ["derive"]}
borsh-derive = "1.5.1"
rustls = "0.21.12"
ring = "0.17.8"
base64 = "0.12.3"
signature = "1.6.4"

ndarray = "0.16.1"
rayon = "1.10.0"
rand = "0.8.5"
nalgebra = {version = "0.33.2", features = ["serde", "serde-serialize"]}
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"